[tool.poetry]
name = "pangolin_sdk"
version = "0.1.0"
description = "Pangolin - A Python-based SDK"
authors = ["Manish Bobbili <manishbobbili@github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pangolin_sdk"}]
repository = "https://github.com/manish59/Pangolin"
keywords = ["sdk", "api", "client", "pangolin", "pangolin_sdk"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^2.5.0"
urllib3 = "^2.0.0"
typing-extensions = "^4.8.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
tqdm = "^4.66.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
ruff = "^0.0.291"
pre-commit = "^3.4.0"
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --cov=pangolin_sdk"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "COM", "C4", "UP", "PT", "RET", "SIM"]
ignore = ["B008"]