[tool.poetry]
name = "pangolin_sdk"
version = "1.0.0"
description = "A versatile Python SDK designed to simplify interactions with various systems and services, providing a unified, extensible interface for database operations, API connections, and SSH operations."
authors = ["Manish Kumar Bobbili <manishbobbili@github.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://www.manishbobbili.com"
repository = "https://github.com/manish59/Pangolin"
documentation = "https://github.com/manish59/Pangolin/blob/main/README.md"
keywords = ["sdk", "database", "api", "ssh", "automation", "oracle", "postgresql", "mysql", "sqlserver", "sqlite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
]
packages = [{include = "pangolin_sdk"}]

[tool.poetry.dependencies]
python = "^3.8"
# Database Dependencies
SQLAlchemy = ">=2.0.0"
cx-Oracle = ">=8.0.0"
oracledb = ">=2.0.0"
psycopg2-binary = ">=2.9.0"
PyMySQL = ">=1.1.1"  # Allow any version to resolve compatibility issues

# HTTP/API Dependencies
requests = ">=2.0.0"
urllib3 = ">=1.26.0"

# SSH/Security Dependencies
paramiko = ">=3.0.0"
bcrypt = ">=4.0.0"
cryptography = ">=40.0.0"

# Core Dependencies
typing-extensions = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"

# Code Quality
black = ">=24.1.0"
mypy = ">=1.0.0"
ruff = ">=0.0.290"
isort = ">=5.12.0"

# Documentation
sphinx = ">=7.0.0"
sphinx-rtd-theme = ">=1.0.0"

# Build/Deploy
twine = ">=6.0.0"
build = ">=1.0.0"
poetry = ">=2.0.0"
poetry-core = ">=2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/manish59/Pangolin/issues"

[tool.poetry.scripts]
pangolin = "pangolin_sdk.cli:main"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --cov=pangolin_sdk"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "COM", "C4", "UP", "PT", "RET", "SIM"]
ignore = ["B008"]